--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
     compile 'com.google.guava:guava:21.0'
 }
